<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".HelloActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bkgg"> <androidx.appcompat.widget.Toolbar
        android:id="@+id/hello_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_appointments_title"
            android:textColor="@color/blue_primary"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

    </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/hello_toolbar"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"
                    android:backgroundTint="@color/card_background_light">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/user_profile_title"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:textColor="@color/blue_primary"
                            android:layout_marginBottom="12dp"/>

                        <TextView
                            android:id="@+id/text_display_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Nume: "
                            android:textSize="18sp"
                            android:textColor="@color/text_primary_dark"
                            android:layout_marginBottom="6dp"/>

                        <TextView
                            android:id="@+id/text_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Email: "
                            android:textSize="18sp"
                            android:textColor="@color/text_primary_dark"
                            android:layout_marginBottom="6dp"/>

                        <TextView
                            android:id="@+id/text_uid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="ID Utilizator: "
                            android:textSize="14sp"
                            android:textColor="@color/text_secondary_dark"
                            android:layout_marginTop="10dp"/>

                        <TextView
                            android:id="@+id/text_creation_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Cont creat la: "
                            android:textSize="14sp"
                            android:textColor="@color/text_secondary_dark"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_appointments_title"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/blue_primary"
                    android:layout_marginBottom="16dp"/>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottie_no_appointments"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_fileName="checklist.json"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/text_no_appointments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_appointments_message"
                    android:textSize="18sp"
                    android:textColor="@color/text_secondary_dark"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:visibility="gone" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_appointments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:scrollbars="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_appointment"/>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>